fixed spacing under quotes

--- a/source/scss/hero.scss
+++ b/source/scss/hero.scss
@@ -5,7 +5,7 @@
     background-size: cover;
     background-image: url('../img/976xcecesinkde27.jpg');
     height: 0;
-    padding-bottom: 37%;
+    padding-bottom: 45%;
     position: relative;
 
     @media (max-aspect-ratio: 1/1) {
